--- a/Semantic Elements.html
+++ b/Semantic Elements.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        img{
+            width: 300px;
+            height: 400px;
+            object-fit: cover;
+        }
+    </style>
 </head>
 <body>
     <article class="article">
@@ -12,7 +19,7 @@
         <p>
             <mark> Lorem </mark> ipsum dolor sit amet consectetur adipisicing elit. Veritatis omnis corrupti veniam alias laudantium itaque in tenetur unde, fugiat temporibus aspernatur similique aliquid laborum nulla debitis maxime! Repellat, culpa deserunt?</p>
         <figure>
-            <img src="" alt="">
+            <img src="Images/coffee.jpg" alt="Coffee">
             <figcaption>My coffee this Morning</figcaption>
         </figure>
     </article>
