--- a/Colors.html
+++ b/Colors.html
@@ -13,7 +13,7 @@
 </html>
 
 
-1. In this rgba is used for transparencey, so that we can see the background text
+<!-- 1. In this rgba is used for transparencey, so that we can see the background text
 .box {
     width: 200px;
     height: 200px;
@@ -33,4 +33,4 @@
     width: 200px;
     height: 200px;
     background-color: hsl(60, 100%, 50%); or hsla(60, 100%, 50%, 0.5);
-}
+} -->
