Update Measuring Units

--- a/Measuring Units.html
+++ b/Measuring Units.html
@@ -15,6 +15,10 @@
 </html>
 
 
+<!-- html {
+    /* i.e 62.5% x 16px = 10px */
+    font-size: 62.5%;  
+}
 
 *, *::before, *::after {
     box-sizing: border-box;
@@ -60,3 +64,11 @@ There is problem with "em" unit is If we don't have an explicit font-size set on
     background-color: gold;
     border-top: 3px solid red;
 } */
+
+For this example, we are using rem units. That is dented in html element. That is 62.5% x 16px = 10px. So, 1rem = 10px. So, if we want to set the font-size to 20px, we can set it to 2rem.
+.box{
+    width: 15rem;
+    height: 100vh;
+    background-color: gold;
+    border-top: 3px solid red;
+} -->
