--- a/Hiding Elements.html
+++ b/Hiding Elements.html
@@ -15,9 +15,9 @@
 
 
 <!-- .first {
-    /* to display or hide the element, if we use none, the element will not be displayed and the space will be occupied by the next element. */
+    /* If we set display to none, the 1st paragraph dissappears and the 2nd paragraph moves up. */
     /* display: none; */
 
-    /* If we use visibility hidden, the element will not be displayed but the space will not be occupied by the next element. */
+    /* If we set visibility to hidden, the 1st paragraph dissappears but the 2nd paragraph stays in place. */
     visibility: hidden;
 } -->
