Supporting High-density Screens

--- a/Supporting High-density Screens.html
+++ b/Supporting High-density Screens.html
@@ -14,7 +14,7 @@
 </html>
 
 
-<!-- 1. Before using the srcset, we need to edit the image by changing the width and heightof the pixels. 
+<!-- 1. Before using the srcset, we need to edit the image by changing the width and height respect to the required pixels. 
 
 2. Using Source set we can specify different images for different screen resolutions. The browser will choose the most appropriate image based on the device's pixel density.
 
