--- a/Text Fields.html
+++ b/Text Fields.html
@@ -25,6 +25,8 @@
 </body>
 </html>
 
+
+
 <!-- 1. If we use input type as text, we can enter any type of data.
 
 2. If we use input type as number, we can enter only numbers.
@@ -52,7 +54,23 @@
 13. If we use textarea with cols and rows, we can set the width and height of the textarea.
 
 
+
+
 (i) We can use all the things used for input type to textarea also.
 
 (ii) The only diffrence is for the readonly, were we need to use it as; -->
 <textarea>Sushyam</textarea>
+
+
+
+
+<!-- Style.css -->
+
+<!-- form {
+    width: 50%;
+    padding: 2rem;
+}
+
+textarea {
+  resize: none;;
+} -->
