--- a/Radio Buttons.html
+++ b/Radio Buttons.html
@@ -10,16 +10,21 @@
 </head>
 <body>
     <div>
-        <input type="radio" id="Front-End">
-        <label class="label-inline" for="Front-End">Front-End</label>
+        <input type="radio" name="membership" id="Silver">
+        <label class="label-inline" for="Silver">Silver</label>
     </div>
-        <div>
-        <input type="radio" id="Front-End" checked>
-        <label class="label-inline" for="Front-End">Front-End</label>
+    <div>
+        <input type="radio" name="membership" id="Gold" checked>
+        <label class="label-inline" for="Gold">Gold</label>
     </div>
-        <div>
-        <input type="radio" id="Front-End" disabled>
-        <label class="label-inline" for="Front-End">Front-End</label>
+    <div>
+        <input type="radio" id="Gold" disabled>
+        <label class="label-inline" for="Gold">Gold</label>
     </div>
 </body>
 </html>
+
+
+<!-- body {
+  padding: 2rem;
+} -->
